--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             Frank R Castillo
         </title>
         <style>
-            html { -khtml-user-select: none; -o-user-select: none; -moz-user-select: none; -webkit-user-select: none; user-select: none; } 
+            html { -khtml-user-select: none; -o-user-select: none; -moz-user-select: none;
+                   -webkit-user-select: none; user-select: none; } 
             body { margin-bottom: 0px; margin-left: 0px; margin-right: 0px; margin-top: 0px;
                    font-family: "Lucida Console", Monaco, monospace; font-size: 11px;
                    text-align: left; color: #eeeeee; background-color: #000000 }
@@ -20,9 +21,12 @@
             #profile { font-size: 3.5px; }
             .fTle a { color: #fefefe !important; word-wrap: break-word; }
             .fLst { list-style: none outside none; border: 0px; padding: 5px 5px; text-align: left; }
-            .wdiv { position: absolute; z-index: 9; background-color: #131313; border: 2px solid #fefefe; } 
+            .wdiv { position: absolute; z-index: 9; background-color: #202020; border: 2px solid #fefefe; resize: both; overflow: auto;} 
             .wdivheader { cursor: move; z-index: 10; background-color: #fefefe; color: #111111; }
-            .closeBtn { float: right; color: #111111; z-index: 11; text-decoration: none; }
+            .closeBtn { float: right; color: #111111; z-index: 11; }
+            .mainCell { width: 100%; vertical-align: top; }
+            #resizeBtn { text-align: right; vertical-align: bottom; }
+            #winTable { height: 100%; vertical-align: top; }
             @media only screen and (max-width: 480px) and (max-device-width: 480px)and (orientation: portrait) {
                 table { border-spacing: 0px; height: 100%; }
                 .fLst { width: 420px; }
@@ -154,17 +158,18 @@
              * Floating window code forked from https://www.w3schools.com/howto/howto_js_draggable.asp
              */
 
-        mainbody = "<table><tr><td id='profile'><a href='#' onclick='javascript:pictureShow()'>OOOOOOOkkkkkkkkkkkkkkkkOOOOOOOOOOOOOO0000000000OOO<br/>OOOOOOOkkkkkkkkkkkkkkkkOOOOOOOOOOOOOO0K00000000OOO<br/>OOOOOOOkkkkkkkkkkkkkOOOOOOOOOOOOkOOO0KK00000000OOO<br/>OOOOOOOOkkkkkkkkkkkOOOOOOOkdollccclodxO00000000OOO<br/>00OOOOOOkkkkkkkkkkOOOOOOkl:;::::ccclllooxO00000OOO<br/>000000OOkkOkOOOkkOOOOOOd;,;;;;::cccllooooox00000OO<br/>0000000OOOkOOOOOOOOOOOk;,,;;;;;::cloxkkdooox0000OO<br/>0000000OOOOOOOOOOOOOOOd,,,,;;;;;::coxkkkdollO00OOO<br/>0000000OOOOOOOOOOOOOOOl'''',;;;::cldkkkxxolcd00OOO<br/>0000000OOOOOOOOOOOOOoc;.'',,,'...';coxxxdolcl000OO<br/>0000000OOOOOOOOOOOOk,.'.'',,...',....cc,....:00OOO<br/>0000000OOOOOOOOOOOOx:'.'',,:c;..';;,;ol'.'''o000OO<br/>0000000OOOOOOOOOOOOkl;.'',,;coxxdolcldxocclok00OOO<br/>0000000OOOOOOOOOOOOOkl.'',,,:ldxoc:loxOdoxxok00OOO<br/>0000000OOOOOOOOOOOOOOk',,','';;,;....,;;:,cl0000OO<br/>0000000OOOOOOOOOOOOOOd',,'''':;'',,;:::::;,d000OOO<br/>0000000OOOOOOOOOOOOOkc'','...;:;;;cldollc:o0000OOO<br/>00000000OOOOOOOOOOOo.'........,;:;;:cclc:x00000OOO<br/>00000000OOOOOOOOOk;......&nbsp&nbsp....',:ccll:lO000000OOO<br/>0000000OOOOOOOOxl,...&nbsp....&nbsp&nbsp&nbsp&nbsp......';o00000000OOO<br/>0000000OOOOOOx:..........'..&nbsp&nbsp&nbsp&nbsp&nbsp....looc;;:coOOOO<br/>0000000OOOxl;'...........',,'...&nbsp...,lool'..&nbsp&nbsp.lOO<br/>000000Ooc;'........'''...',clloo',;,,dd:...&nbsp&nbsp&nbsp&nbsp&nbsp;k<br/>000kd:'.........'....'''..''cddc',:;,odl,...&nbsp&nbsp&nbsp&nbsp&nbsp,<br/>0k:'...........''...&nbsp.'.'.'''cddxxxx,oxdl,.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/></a></td><td>I am masters student of economics at the University of South Florida. When time allows, I write about politics, economics, international relations, and technology. Professionally, I’ve had the opportunity to Anti-Money Laundering (AML), financial compliance, and information technology. These experiences have inspired my current academic interests, and I hope to someday bring together economics, mathematics, and big data to develop systems and methods that help mitigate financial crime risk. In 2013, I received an Honorable Discharge from the United States Marine Corps after nine years of service. Follow me on social media: <a href='https://medium.com/frank-r-castillo' target='_blank'>Medium</a>, <a href='https://twitter.com/FrankRCastillo' target='_blank'>Twitter</a>, <a href='https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g' target='_blank'>YouTube</a>, <a href='https://github.com/FrankRCastillo' target='_blank'>GitHub</a>, <a href='https://www.linkedin.com/in/franklinrcastillo/' target='_blank'>LinkedIn</a></td></tr></table>"
+            defaultWdt = "780px";
+            mainbody = "<table><tr><td id='profile'><a href='#' onclick='javascript:pictureShow()'>OOOOOOOkkkkkkkkkkkkkkkkOOOOOOOOOOOOOO0000000000OOO<br/>OOOOOOOkkkkkkkkkkkkkkkkOOOOOOOOOOOOOO0K00000000OOO<br/>OOOOOOOkkkkkkkkkkkkkOOOOOOOOOOOOkOOO0KK00000000OOO<br/>OOOOOOOOkkkkkkkkkkkOOOOOOOkdollccclodxO00000000OOO<br/>00OOOOOOkkkkkkkkkkOOOOOOkl:;::::ccclllooxO00000OOO<br/>000000OOkkOkOOOkkOOOOOOd;,;;;;::cccllooooox00000OO<br/>0000000OOOkOOOOOOOOOOOk;,,;;;;;::cloxkkdooox0000OO<br/>0000000OOOOOOOOOOOOOOOd,,,,;;;;;::coxkkkdollO00OOO<br/>0000000OOOOOOOOOOOOOOOl'''',;;;::cldkkkxxolcd00OOO<br/>0000000OOOOOOOOOOOOOoc;.'',,,'...';coxxxdolcl000OO<br/>0000000OOOOOOOOOOOOk,.'.'',,...',....cc,....:00OOO<br/>0000000OOOOOOOOOOOOx:'.'',,:c;..';;,;ol'.'''o000OO<br/>0000000OOOOOOOOOOOOkl;.'',,;coxxdolcldxocclok00OOO<br/>0000000OOOOOOOOOOOOOkl.'',,,:ldxoc:loxOdoxxok00OOO<br/>0000000OOOOOOOOOOOOOOk',,','';;,;....,;;:,cl0000OO<br/>0000000OOOOOOOOOOOOOOd',,'''':;'',,;:::::;,d000OOO<br/>0000000OOOOOOOOOOOOOkc'','...;:;;;cldollc:o0000OOO<br/>00000000OOOOOOOOOOOo.'........,;:;;:cclc:x00000OOO<br/>00000000OOOOOOOOOk;......&nbsp&nbsp....',:ccll:lO000000OOO<br/>0000000OOOOOOOOxl,...&nbsp....&nbsp&nbsp&nbsp&nbsp......';o00000000OOO<br/>0000000OOOOOOx:..........'..&nbsp&nbsp&nbsp&nbsp&nbsp....looc;;:coOOOO<br/>0000000OOOxl;'...........',,'...&nbsp...,lool'..&nbsp&nbsp.lOO<br/>000000Ooc;'........'''...',clloo',;,,dd:...&nbsp&nbsp&nbsp&nbsp&nbsp;k<br/>000kd:'.........'....'''..''cddc',:;,odl,...&nbsp&nbsp&nbsp&nbsp&nbsp,<br/>0k:'...........''...&nbsp.'.'.'''cddxxxx,oxdl,.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/></a></td><td>I am masters student of economics at the University of South Florida. When time allows, I write about politics, economics, international relations, and technology. Professionally, I’ve had the opportunity to Anti-Money Laundering (AML), financial compliance, and information technology. These experiences have inspired my current academic interests, and I hope to someday bring together economics, mathematics, and big data to develop systems and methods that help mitigate financial crime risk. In 2013, I received an Honorable Discharge from the United States Marine Corps after nine years of service. Follow me on social media: <a href='https://medium.com/frank-r-castillo' target='_blank'>Medium</a>, <a href='https://twitter.com/FrankRCastillo' target='_blank'>Twitter</a>, <a href='https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g' target='_blank'>YouTube</a>, <a href='https://github.com/FrankRCastillo' target='_blank'>GitHub</a>, <a href='https://www.linkedin.com/in/franklinrcastillo/' target='_blank'>LinkedIn</a></td></tr></table>"
 
             twitterbody = "<table style='height: 100px'><tr><td><div id='TwitterRss'></div></td></tr></table>";
             mediumbody  = "<div id='MediumRss'></div>";
             youtubebody = "<div id='YouTubeRss'></div>";
 
-            windowCreate("sysmesg", "System Message", "<p>Under Construction</p>", "10px", "15px", "765px");
-            windowCreate("mainwin", "Frank R. Castillo", mainbody, hgtElement("sysmesg"), "15px", "765px");
-            windowCreate("youtubewin", "YouTube", youtubebody, hgtElement("mainwin"), "15px", "765px");
-            windowCreate("mediumwin", "Medium", mediumbody, hgtElement("youtubewin"), "25px", "765px");
-            windowCreate("tweetwin", "Twitter", twitterbody, hgtElement("mediumwin"), "35px", "765px");
+            windowCreate("sysmesg", "System Message", "<p id='systempanel'>Under Construction</p>", "10px", "15px", defaultWdt);
+            windowCreate("mainwin", "Frank R. Castillo", mainbody, hgtElement("sysmesg"), "15px", defaultWdt);
+            windowCreate("youtubewin", "YouTube", youtubebody, hgtElement("mainwin"), "15px", defaultWdt);
+            windowCreate("mediumwin", "Medium", mediumbody, hgtElement("youtubewin"), "25px", defaultWdt);
+            windowCreate("tweetwin", "Twitter", twitterbody, hgtElement("mediumwin"), "35px", defaultWdt);
             windowCreate("picwin", "Picture", "<img src='picture.jpeg'>", "100px", "200px", "400px");
 
             document.getElementById("picwin").style.visibility = 'hidden';
@@ -177,7 +182,8 @@
             function windowCreate(divName, windowTitle, windowBody, topVal, leftVal, width) {
                 template  = "<div id='" + divName + "' class='wdiv' onmousedown='frontElement(\"" + divName + "\")'>\n";
                 template += "<div id='" + divName + "header' class='wdivheader'>\n";
-                template += "<b>" + windowTitle + "<a href'#' class='closeBtn' onclick='closeElement(\"" + divName + "\")'>X&nbsp</a></b>\n";
+                template += "<b>" + windowTitle;
+                template += "<b class='closeBtn' onclick='closeWindow(\"" + divName + "\")'>⛝</b></b>\n";
                 template += "</div>\n";
                 template += windowBody;
                 template += "</div>";
@@ -192,6 +198,7 @@
                 divElem.style.left = leftVal;
                 divElem.style.width = width;
                 dragElement(divElem);
+//                resizeElement(divElem);
 
                 function dragElement(elmnt) {
                     var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
@@ -208,13 +215,14 @@
                         // get the mouse cursor position at startup:
                         pos3 = e.clientX;
                         pos4 = e.clientY;
-                        document.onmouseup = closeDragElement;
+                        document.onmouseup = closeElement;
                         // call a function whenever the cursor moves:
                         document.onmousemove = elementDrag;
                     }
 
                     function elementDrag(e) {
                         e = e || window.event;
+
                         // calculate the new cursor position:
                         pos1 = pos3 - e.clientX;
                         pos2 = pos4 - e.clientY;
@@ -224,16 +232,43 @@
                         elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
                         elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
                     }
-
-                    function closeDragElement() {
-                        // stop moving when mouse button is released:
-                        document.onmouseup = null;
-                        document.onmousemove = null;
+                }
+/*
+                function resizeElement(elmnt) {
+                    var pos = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+                    if (document.getElementById(elmnt.id + "drag")) {
+                        document.getElementById(elmnt.id + "drag").onmousedown = resizeDown;
                     }
+
+                    function resizeDown(e) {
+                        e = e || window.event;
+                        pos3 = e.clientX;
+                        pos4 = e.clientY;
+                        document.onmouseup = closeElement;
+                        document.onmousemove = resizeAction;
+                    }
+
+                    function resizeAction(e) {
+                        e = e || window.event;
+                        document.getElementById("systempanel").innerHTML = pos3 + ", " + pos4;
+                        
+                        pos1 = pos3 - e.clientX;
+                        pos2 = pos4 - e.clientY;
+                        pos3 = e.clientX;
+                        pos4 = e.clientY;
+                        elmnt.style.height = (elmnt.offsetHeight - pos2) + "px";
+                        elmnt.style.width = (elmnt.offsetWidth - pos1) + "px";
+                    }
+                 }
+*/
+                function closeElement() {
+                    // stop moving when mouse button is released
+                    document.onmouseup = null;
+                    document.onmousemove = null;
                 }
             }
 
-            function closeElement(divName) {
+            function closeWindow(divName) {
                 document.getElementById(divName).style.visibility = 'hidden';
             }
 
@@ -244,10 +279,9 @@
 
             function hgtElement(divName) {
                 elmnt = document.getElementById(divName);
-                elmntHgt = (elmnt.offsetTop + elmnt.offsetHeight + 5) + "px";
+                elmntHgt = (elmnt.offsetTop + elmnt.offsetHeight + 4) + "px";
                 return elmntHgt;
             }
-
         </script>
     </body>
 </html>
