--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             #profile { font-size: 3.5px; }
             .fTle a { color: #fefefe !important; word-wrap: break-word; }
             .fLst { list-style: none outside none; border: 0px; padding: 5px 5px; text-align: left; }
-            .wdiv { position: absolute; z-index: 9; background-color: #202020; border: 2px solid #fefefe; resize: both; overflow: auto;} 
+            .wdiv { position: absolute; z-index: 9; background-color: #202020;
+                    border: 2px solid #fefefe; resize: both; overflow: auto;} 
             .wdivheader { cursor: move; z-index: 10; background-color: #fefefe; color: #111111; }
             .closeBtn { float: right; color: #111111; z-index: 11; }
             .mainCell { width: 100%; vertical-align: top; }
