--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             picturebody = "<img id='profile' src='picture.jpeg'>";
                        //element id  , element title      , elem body  , top                 , left   , width  , height , resizeable?
             windowCreate("sysmesg"   , "System Message"   , sysmesgbody, "10px"              , "15px" , "760px", ""     , false );
-            windowCreate("mainwin"   , "Frank R. Castillo", mainbody   , hgtElem("sysmesg")  , "124px", "651px", ""     , false );
+            windowCreate("mainwin"   , "Frank R. Castillo", mainbody   , hgtElem("sysmesg")  , "124px", "651px", "117px", false );
             windowCreate("picwin"    , "Picture"          , picturebody, hgtElem("sysmesg")  , "15px" , "101px", ""     , true  );
             windowCreate("tweetwin"  , "Twitter"          , twitterbody, hgtElem("mainwin")  , "15px" , "760px", "170px", false );
             windowCreate("mediumwin" , "Medium"           , mediumbody , hgtElem("tweetwin") , "15px" , "760px", "170px", false );
