--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
             mediumbody  = "<div id='MediumRss'></div>";
             youtubebody = "<div id='YouTubeRss'></div>";
             picturebody = "<img id='profile' src='picture.jpeg'>";
-                       //element id  , element title      , elem body  , top                 , left   , width  , height , resizeable?
-            windowCreate("sysmesg"   , "System Message"   , sysmesgbody, "10px"              , "15px" , "760px", ""     , false );
-            windowCreate("mainwin"   , "Frank R. Castillo", mainbody   , hgtElem("sysmesg")  , "124px", "651px", "117px", false );
-            windowCreate("picwin"    , "Picture"          , picturebody, hgtElem("sysmesg")  , "15px" , "101px", ""     , true  );
-            windowCreate("tweetwin"  , "Twitter"          , twitterbody, hgtElem("mainwin")  , "15px" , "760px", "170px", false );
-            windowCreate("mediumwin" , "Medium"           , mediumbody , hgtElem("tweetwin") , "15px" , "760px", "170px", false );
-            windowCreate("youtubewin", "YouTube"          , youtubebody, hgtElem("mediumwin"), "15px" , "760px", ""     , false );
+                       //element id  , element title      , elem body  , top                  , left   , width  , height , resizeable?
+            windowCreate("systemmesg", "System Message"   , sysmesgbody, "10px"               , "15px" , "760px", ""     , false );
+            windowCreate("mainwindow", "Frank R. Castillo", mainbody   , hgtElem("systemmesg"), "124px", "651px", "117px", false );
+            windowCreate("picturewin", "Picture"          , picturebody, hgtElem("systemmesg"), "15px" , "101px", ""     , true  );
+            windowCreate("twitterwin", "Twitter"          , twitterbody, hgtElem("mainwindow"), "15px" , "760px", "170px", false );
+            windowCreate("mediumwin" , "Medium"           , mediumbody , hgtElem("twitterwin"), "15px" , "760px", "170px", false );
+            windowCreate("youtubewin", "YouTube"          , youtubebody, hgtElem("mediumwin") , "15px" , "760px", ""     , false );
             
 
             function windowCreate(divName, windowTitle, windowBody, top, left, width, height, resizeable) {
